feat: add LogOut method

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,10 +1,12 @@
 Auth
 
 [x] - Верстка авторизации / регистрации 
-[x] - Добавление класса disabled к button Войти/Регистрация 
-[] - Доделать Авторизацию
-[] - Доделать Регистрацию
+[x] - Переключение Авторизация / регистрация 
+[x] - Добавление класса disabled isLoading к button Войти/Регистрация 
+[x] - Доделать Авторизацию
+[x] - Доделать Регистрацию
 [] - Валидация формы 
 [] - Мобильная верстка 
+[] - Logout
 ???[] - Возможно отображение ошибок в виде модального окна
 
