feat: add style for addItem block

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -7,6 +7,10 @@ Auth
 [x] - Доделать Регистрацию
 [] - Валидация формы 
 [] - Мобильная верстка 
-[] - Logout
+[x] - Logout
 ???[] - Возможно отображение ошибок в виде модального окна
+
+
+AddItem 
+
 
