feat: add functional of add interview and add styles for addItem block

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -13,4 +13,10 @@ Auth
 
 AddItem 
 
+[x] - Верстка страницы добавления интервью
+[x] - Добавление логики к кнопке 'Создать собеседование'
+[x] - Добавление firebase firestore (Базу данных firebase)
+[] - Отображение, добавления / ошибки интервью, в виде модального окна 
+[] - Валидация полей ввода 
+[] - Мобильная верстка 
 
