feat: add function getAllInterviews (show all interviews)

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -20,3 +20,11 @@ AddItem
 [] - Валидация полей ввода 
 [] - Мобильная верстка 
 
+ListItem
+
+[] - Верстка страницы Списка собеседований
+[] - Создание таблицы с полями и пагинацией
+[] - Добавление функционала отображения собеседований из firebase
+[] - Добавление функционала удаления собеседований из firebase
+[] - 
+
