feat: add firebase hosting and deploy to firebase and add data to chart

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -26,5 +26,12 @@ ListItem
 [] - Создание таблицы с полями и пагинацией
 [] - Добавление функционала отображения собеседований из firebase
 [] - Добавление функционала удаления собеседований из firebase
-[] - 
 
+
+Осталось сделать:
+
+[] - Подтверждение Email
+[] - Сброс пароля   
+[] - Ввод пароля 2 раза 
+[] - Окно уведомлений справа всплывающее.
+[] - Окно подтверждений ( выхода с сайта)
